--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.1.0",
-    "react-toastify": "^11.0.5",
-    "remark-gfm": "^4.0.1"
+  "react-toastify": "^11.0.5",
+  "remark-gfm": "^4.0.1",
+  "remark-breaks": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
